--- a/sjhl/package.json
+++ b/sjhl/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sjhl",
   "version": "0.1.0",
+  "homepage": "https://https://stevenleej.github.io/react-gh-pages",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^1.8.8",
@@ -25,6 +26,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -47,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
