--- a/sjhl/package.json
+++ b/sjhl/package.json
@@ -18,6 +18,7 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
     "font-awesome": "^4.7.0",
     "framer-motion": "^6.3.2",
     "react": "^18.0.0",
