--- a/sjhl/package.json
+++ b/sjhl/package.json
@@ -1,7 +1,6 @@
 {
   "name": "sjhl",
   "version": "0.1.0",
-  "homepage": "https://https://stevenleej.github.io/stevenhome",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^1.8.8",
@@ -21,6 +20,7 @@
     "cors": "^2.8.5",
     "font-awesome": "^4.7.0",
     "framer-motion": "^6.3.2",
+    "lamina": "^1.1.18",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.0.0",
@@ -29,8 +29,6 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
