--- a/sjhl/package.json
+++ b/sjhl/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sjhl",
   "version": "0.1.0",
+  "homepage": "https://https://stevenleej.github.io/stevenhome",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^1.8.8",
@@ -30,6 +31,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
