--- a/sjhl/package.json
+++ b/sjhl/package.json
@@ -22,6 +22,7 @@
     "font-awesome": "^4.7.0",
     "framer-motion": "^6.3.2",
     "lamina": "^1.1.18",
+    "nth-check": "^2.0.1",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.0.0",
